updates for heroku deployment

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff;
+  background-color: rgb(243, 224, 215);
   color: #333;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
