updates for heroku deployment

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(243, 224, 215);
+  background-color: #fff;
   color: #333;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
@@ -23,7 +23,7 @@ a {
   color: #000;
 
   &:visited {
-    color: #666;
+    color: rgb(64, 72, 140)
   }
 
   &:hover {
@@ -47,7 +47,7 @@ div {
 }
 
 #notice {
-  color: green;
+  color: rgb(53, 67, 86)
 }
 
 .field_with_errors {
