updates for heroku deployment

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -23,7 +23,7 @@ a {
   color: #000;
 
   &:visited {
-    color: rgb(64, 72, 140)
+    color: #333
   }
 
   &:hover {
@@ -47,7 +47,7 @@ div {
 }
 
 #notice {
-  color: rgb(53, 67, 86)
+  color: rgb(181, 76, 95)
 }
 
 .field_with_errors {
